# pylsqpack

./: .appveyor.yml  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  vcpkg.json
.github/workflows/: tests.yml
.travis/: script
docs/: Makefile  conf.py  index.rst
src/: decoder.c  encoder.c  module.c
src/pylsqpack/: __init__.py  about.py  binding.c
tests/: test_decoder.py  test_encoder.py  test_roundtrip.py
vcpkg_ports/pkgconf/: darwin.patch  portfile.cmake  vcpkg.json
